--- a/src/main/resources/templates/gerenciarRoupaUtensilios.html
+++ b/src/main/resources/templates/gerenciarRoupaUtensilios.html
@@ -63,39 +63,43 @@
     <div class="container pesquisa col-auto " >
 
         <form action=" " method="post" >
-            <button type="submit"><i class="fas fa-search fa-1x"></i></button>
+
             <label for="busca">Buscar</label>
             <input type="search" id="busca" name="q">
+            <button type="submit"><i class="fas fa-search fa-1x"></i></button>
             <a class="btn btn-primary ml-5" href="/cadastrarRoupaUtensilios" role="button">Cadastrar</a>
         </form>
 
     </div>
 
-    <div class="container principal">
-        <table class="table ">
+    <div class="card posicao" style="width: 50%;">
+        <div class="card-body">
+        <table class="table">
             <thead>
             <tr>
-                <th scope="col">Número</th>
+                <th scope="col">Código</th>
                 <th scope="col">Descrição</th>
                 <th scope="col">Cor</th>
                 <th scope="col">Ação</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="roupaUtensilios : ${roupaUtensilios}">
-                <th scope="row" th:text="${roupaUtensilios.codRoupaUtensilios}"></th>
-                <th scope="row"></th>
-                <th scope="row" th:text="${roupaUtensilios.cor}"></th>
-                <th scope="row" ></th>
-                <td></td>
-                <!--
-                ALTERAR ESSE LINK PARA BOTÃO QUANDO A TABELA ESTIVER PRONTA
-                -->
-                <td><a class="btn btn-primary ml-5" href="/" role="button">Editar</a></td>
-                <td><a class="btn btn-primary ml-5" href="/" role="button">Excluir</a></td>
-            </tr>
+                <tr th:each="roupaUtensilios: ${roupaUtensilios}">
+<!--                <tr th:each="tipoRoupa: ${tipoRoupa}">-->
+                    <th th:text="${roupaUtensilios.codRoupaUtensilios}"></th>
+<!--                    <th th:text="${tipoRoupa.descricao}"></th>-->
+                    <th scope="row" th:text="${roupaUtensilios.cor}"></th>
+
+
+                    <td><a class="btn btn-primary ml-5" role="button">Editar</a>
+                    <a class="btn btn-primary ml-5"  role="button">Excluir</a></td>
+                </tr>
+                <tr th:each="tipoRoupa: ${tipoRoupa}">
+                    <th th:text="${tipoRoupa.descricao}"></th>
+                </tr>
             </tbody>
         </table>
+        </div>
     </div>
     <!--</div>-->
 </header>
