Commit dia 17 de novembro

--- a/src/main/resources/templates/atualizarRetirada.html
+++ b/src/main/resources/templates/atualizarRetirada.html
@@ -32,7 +32,12 @@
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
         <a class="navbar-brand" href="/index"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
-        <a class="btn btn-dark" href="/" role="button">Sair</a>
+        <form method="post" th:action="@{/logout}">
+            <button type="submit" class="btn btn-dark">
+                <span class="glyphicon glyphicon-log-out"></span>
+                Sair
+            </button>
+        </form>
     </div>
 </nav>
 
