Commit dia 18 de novembro

--- a/src/main/resources/templates/atualizarData.html
+++ b/src/main/resources/templates/atualizarData.html
@@ -32,7 +32,9 @@
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
         <a class="navbar-brand" href="/index"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
-        <a class="btn btn-dark" href="/" role="button">Sair</a>
+        <form th:action="@{/logout}" method="post">
+            <button class="btn btn-dark" type="submit">Sair</button>
+        </form>
     </div>
 </nav>
 
@@ -77,7 +79,7 @@
             <label for="cor">Data de Entrega:<input type="date" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
             <br>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
-            <a class="btn btn-danger ml-5" href="/dashboard" role="button">Cancelar</a>
+            <a class="btn btn-danger ml-5" href="/home" role="button">Cancelar</a>
         </form>
         <!--</div>-->
     </div>
