--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <head>
 
@@ -32,7 +33,9 @@
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
         <a class="navbar-brand" href="/index"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
-        <a class="btn btn-dark" href="/" role="button">Sair</a>
+        <form th:action="@{/logout}" method="post">
+            <button class="btn btn-dark" type="submit">Sair</button>
+        </form>
     </div>
 </nav>
 
@@ -40,7 +43,7 @@
 <header class="masthead text-dark text-center">
     <!-- <div class="overlay "></div>-->
     <div class="container box-left" >
-        <h3>Nome da pessoa vai aqui</h3>
+        <h3><span sec:authentication="name">arrumar isso depois</span></h3>
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
         <br>
         <br>
