--- a/src/main/resources/templates/acharNome.html
+++ b/src/main/resources/templates/acharNome.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
 
@@ -43,9 +43,7 @@
 <header class="masthead text-dark text-center">
     <!-- <div class="overlay "></div>-->
     <div class="container box-left" >
-        <div class="page-header">
-            <h1>Bem vindo(a), <span sec:authentication="name"></span>!</h1>
-        </div>
+        <h3>Nome da pessoa vai aqui</h3>
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
         <br>
         <br>
@@ -64,17 +62,46 @@
         <!--</div>-->
     </div>
 
-    <div class="container pesquisa">
-        <form action=" " method="post">
-            <button type="submit"><i class="fas fa-search fa-1x"></i></button>
+    <div class="container pesquisa col-auto " >
+
+        <form action=" " method="post" >
+
             <label for="busca">Buscar</label>
             <input type="search" id="busca" name="q">
-
+            <button type="submit"><i class="fas fa-search fa-1x"></i></button>
+            <a class="btn btn-primary ml-5" href="/cadastrarCli" role="button">Cadastrar</a>
         </form>
+
     </div>
 
-    <div class="container principal">
+    <div class="card posicao" style="width: 50%;">
+        <!--/*@thymesVar id="equals" type=""*/-->
 
+        <div class="card-body">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Número</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Ação</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!--Para cada cliente apararece o código e nome dele
+                -->
+                <tr th:each="c:${clientes}">
+<!--                    <div th:if="${}">-->
+<!--                        <div class="alert alert-danger">Nenhum Cliente encontrado!</div>-->
+<!--                    </div>-->
+                    <th th:text="${c.idCli}"></th>
+                    <th th:text="${c.nomeCli}"></th>
+
+                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#buscarCli').arg(0, c.idCli).build()}" role="button">Editar</a>
+                    <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,c.idCli).build()}" role="button">Excluir</a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
     <!--</div>-->
 </header>
