--- a/src/main/resources/templates/gerenciarRoupaUtensilios.html
+++ b/src/main/resources/templates/gerenciarRoupaUtensilios.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
@@ -41,7 +41,7 @@
 <header class="masthead text-dark text-center">
     <!-- <div class="overlay "></div>-->
     <div class="container box-left" >
-        <h3>Nome da pessoa vai aqui</h3>
+        <h3>Bem vindo,<span sec:authentication="name"></span></h3>
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
         <br>
         <br>
