Commit dia 23 de novembro

--- a/src/main/resources/templates/acharNome.html
+++ b/src/main/resources/templates/acharNome.html
@@ -31,7 +31,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light backgroundnav static-top">
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
-        <a class="navbar-brand" href="/index"><b>To Dress</b></a>
+        <a class="navbar-brand" href="/home"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
         <form th:action="@{/logout}" method="post">
             <button class="btn btn-dark" type="submit">Sair</button>
@@ -64,19 +64,25 @@
 
     <div class="container pesquisa col-auto " >
 
-        <form action=" " method="post" >
+        <form th:action="@{/nomeCli}"  method="GET" >
 
-            <label for="busca">Buscar</label>
-            <input type="search" id="busca" name="q">
+
+
+            <label for="nomeCli">Buscar</label>
+            <input type="text" id="nomeCli" name="nomeCli">
             <button type="submit"><i class="fas fa-search fa-1x"></i></button>
+
             <a class="btn btn-primary ml-5" href="/cadastrarCli" role="button">Cadastrar</a>
+
         </form>
 
     </div>
 
     <div class="card posicao" style="width: 50%;">
         <!--/*@thymesVar id="equals" type=""*/-->
-
+        <div class="panel-heading letra">
+            <span th:text="${#strings.isEmpty(message)} ? '' : ${message}"><b></b></span>
+        </div>
         <div class="card-body">
             <table class="table">
                 <thead>
