--- a/src/main/resources/templates/acharRoupaUtensilios.html
+++ b/src/main/resources/templates/acharRoupaUtensilios.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://thymeleaf.org"
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
@@ -30,7 +31,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light backgroundnav static-top">
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
-        <a class="navbar-brand" href="/home"><b>To Dress</b></a>
+        <a class="navbar-brand" href="/index"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
         <form th:action="@{/logout}" method="post">
             <button class="btn btn-dark" type="submit">Sair</button>
@@ -61,24 +62,46 @@
         <!--</div>-->
     </div>
 
-    <div class="container box">
-        <!-- <div class="row">-->
-        <!--<div class="col-xl-9 mx-auto">-->
-        <h1>Cadastro de Traje</h1>
-        <form method="post" action="/salvarRoupaUtensilios">
-            <label for="codRoupaUtensilios">Código:<input type="text" name="codRoupaUtensilios" id="codRoupaUtensilios" class="form-control" placeholder="digite o código"></label>
-            <label for="tamanho">Tamanho:<input type="text" name="tamanho" id="tamanho" class="form-control" placeholder="digite o tamanho pode ser letra ou número" ></label>
-            <br>
-            <label for="cor">Cor:<input type="text" name="cor" id="cor" class="form-control" placeholder="digite a cor" ></label>
-            <label for="precoRoupaUtensilio">Preço:<input type="text" name="precoRoupaUtensilio" id="precoRoupaUtensilio" class="form-control" placeholder="digite o preço" ></label>
-            <br>
-            <label for="codTipoRoupa">Código:<input type="text" name="codTipoRoupa" id="codTipoRoupa" class="form-control" placeholder="digite a descrição" ></label>
-            <label for="descricao">Descrição:<input type="text" name="descricao" id="descricao" class="form-control" placeholder="digite a descrição" ></label>
-            <br>
-            <button type="submit" class="btn btn-primary">Cadastrar</button>
-            <a class="btn btn-danger ml-5" href="/gerenciarRoupaUtensilios" role="button">Cancelar</a>
+    <div class="container pesquisa col-auto " >
+
+        <form th:action="@{/cor}" method="GET" >
+
+            <label for="cor">Buscar</label>
+            <input type="text" id="cor" name="cor">
+            <button type="submit"><i class="fas fa-search fa-1x"></i></button>
+            <a class="btn btn-primary ml-5" href="/cadastrarRoupaUtensilios" role="button">Cadastrar</a>
         </form>
-        <!--</div>-->
+
+    </div>
+
+    <div class="card posicao" style="width: 50%;">
+        <!--/*@thymesVar id="equals" type=""*/-->
+
+        <div class="card-body">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Número</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Ação</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!--Para cada RoupaUtensilios apararece o código e cor dele
+                -->
+                <tr th:each="ru:${cores}">
+                    <!--<div th:if="${}">-->
+                    <!-- <div class="alert alert-danger">Nenhum Cliente encontrado!</div>-->
+                    <!--</div>-->
+                    <th th:text="${ru.cor}"></th>
+                    <th th:text="${ru.codRoupaUtensilios}"></th>
+
+<!--                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#buscarRoupaUtensilios').arg(0, ).build()}" role="button">Editar</a>-->
+<!--                        <a class="btn btn-primary ml-5" th:href="${#mvc.url('CC#excluirCli').arg(0,).build()}" role="button">Excluir</a></td>-->
+<!--                </tr>-->
+                </tbody>
+            </table>
+        </div>
     </div>
     <!--</div>-->
 </header>
@@ -88,11 +111,6 @@
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="vendor/jquery/mascaras.js"></script>
-<script src="vendor/jquery/jquery.maskedinputs.js"></script>
 </body>
 
 </html>
