--- a/src/main/resources/templates/gerenciarCli.html
+++ b/src/main/resources/templates/gerenciarCli.html
@@ -31,7 +31,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light backgroundnav static-top">
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
-        <a class="navbar-brand" href="/index"><b>To Dress</b></a>
+        <a class="navbar-brand" href="/home"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
         <form th:action="@{/logout}" method="post">
             <button class="btn btn-dark" type="submit">Sair</button>
@@ -41,7 +41,6 @@
 
 <!-- Masthead -->
 <header class="masthead text-dark text-center">
-    <!-- <div class="overlay "></div>-->
     <div class="container box-left" >
         <h3>Nome da pessoa vai aqui</h3>
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
@@ -57,21 +56,16 @@
         <br>
         <br>
         <i class="fas fa-calendar-alt fa-3x"></i><a href="/atualizarRetirada">Atualizar Data de Retirada.</a>
-        <!-- <div class="row">-->
-        <!--<div class="col-xl-9 mx-auto">-->
-        <!--</div>-->
+
     </div>
 
     <div class="container pesquisa col-auto " >
 
         <form th:action="@{/nomeCli}"  method="GET" >
 
-
-
             <label for="nomeCli">Buscar</label>
             <input type="text" id="nomeCli" name="nomeCli">
             <button type="submit"><i class="fas fa-search fa-1x"></i></button>
-
             <a class="btn btn-primary ml-5" href="/cadastrarCli" role="button">Cadastrar</a>
 
         </form>
