--- a/src/main/resources/templates/gerenciarRoupaUtensilios.html
+++ b/src/main/resources/templates/gerenciarRoupaUtensilios.html
@@ -31,9 +31,11 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light backgroundnav static-top">
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
-        <a class="navbar-brand" href="/index"><b>To Dress</b></a>
+        <a class="navbar-brand" href="/home"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
-        <a class="btn btn-dark" href="/index" role="button">Sair</a>
+        <form th:action="@{/logout}" method="post">
+            <button class="btn btn-dark" type="submit">Sair</button>
+        </form>
     </div>
 </nav>
 
@@ -62,10 +64,10 @@
 
     <div class="container pesquisa col-auto " >
 
-        <form action=" " method="post" >
+        <form th:action="@{/cor}" method="GET" >
 
-            <label for="busca">Buscar</label>
-            <input type="search" id="busca" name="q">
+            <label for="cor">Buscar</label>
+            <input type="text" id="cor" name="cor">
             <button type="submit"><i class="fas fa-search fa-1x"></i></button>
             <a class="btn btn-primary ml-5" href="/cadastrarRoupaUtensilios" role="button">Cadastrar</a>
         </form>
@@ -73,6 +75,9 @@
     </div>
 
     <div class="card posicao" style="width: 50%;">
+        <div class="panel-heading letra">
+            <span th:text="${#strings.isEmpty(message)} ? '' : ${message}"><b></b></span>
+        </div>
         <div class="card-body">
         <table class="table">
             <thead>
@@ -84,15 +89,11 @@
             </tr>
             </thead>
             <tbody>
-                <tr th:each="roupaUtensilios: ${roupaUtensilios}">
-<!--                <tr th:each="tipoRoupa: ${tipoRoupa}">-->
-                    <th th:text="${roupaUtensilios.codRoupaUtensilios}"></th>
-<!--                    <th th:text="${tipoRoupa.descricao}"></th>-->
-                    <th scope="row" th:text="${roupaUtensilios.cor}"></th>
-
-
-                    <td><a class="btn btn-primary ml-5" role="button">Editar</a>
-                    <a class="btn btn-primary ml-5"  role="button">Excluir</a></td>
+                <tr th:each="roupaU: ${roupaUtensilios}">
+                    <th th:text="${roupaU.codRoupaUtensilios}"></th>
+                    <th scope="row" th:text="${roupaU.cor}"></th>
+                    <td><a class="btn btn-primary ml-5" th:href="${#mvc.url('RUC#excluirRoupaUtensilios').arg(0,roupaU.codRoupaUtensilios ).build()}" role="button">Excluir</a></td>
+<!--                        <a class="btn btn-primary ml-5" th:href="${#mvc.url('RUC#buscarRoupaUtensilios').arg(0,roupaU.codRoupaUtensilios ).build()}" role="button">Excluir</a></td>-->
                 </tr>
                 <tr th:each="tipoRoupa: ${tipoRoupa}">
                     <th th:text="${tipoRoupa.descricao}"></th>
