--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:th="http://thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -31,7 +30,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-light backgroundnav static-top">
     <div class="container" style="display:flex;justify-content:center;align-items:center;">
-        <a class="navbar-brand" href="/index"><b>To Dress</b></a>
+        <a class="navbar-brand" href="/home"><b>To Dress</b></a>
         <span class="navbar-text">Sistema de Gerenciamento de Aluguel de Trajes</span>
         <form th:action="@{/logout}" method="post">
             <button class="btn btn-dark" type="submit">Sair</button>
@@ -46,6 +45,7 @@
         <div class="page-header">
             <h1>Bem vindo(a), <span sec:authentication="name"></span>!</h1>
         </div>
+
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
         <br>
         <br>
