--- a/src/main/resources/templates/gerenciarCli.html
+++ b/src/main/resources/templates/gerenciarCli.html
@@ -41,6 +41,7 @@
 
 <!-- Masthead -->
 <header class="masthead text-dark text-center">
+
     <div class="container box-left" >
         <h3>Nome da pessoa vai aqui</h3>
         <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
@@ -74,6 +75,7 @@
 
     <div class="card posicao" style="width: 50%;">
         <div class="panel-heading letra">
+            <h3>Gerenciar cliente</h3>
             <span th:text="${#strings.isEmpty(message)} ? '' : ${message}"><b></b></span>
         </div>
         <div class="card-body">
