--- a/src/main/resources/templates/atualizarRetirada.html
+++ b/src/main/resources/templates/atualizarRetirada.html
@@ -40,27 +40,51 @@
 
 <!-- Masthead -->
 <header class="masthead text-dark text-center">
-    <!-- <div class="overlay "></div>-->
     <div class="container box-left" >
-        <h3>Nome da pessoa vai aqui</h3>
-        <i class="fas fa-address-book fa-3x"></i><a href="/gerenciarCli"> Gerenciar Cliente.</a>
-        <br>
-        <br>
-        <i class="fas fa-tshirt fa-3x"></i><a href="/gerenciarRoupaUtensilios">Gerenciar Trajes.</a>
-        <br>
-        <br>
-        <i class="fas fa-link fa-3x"></i><a href="/gerenciarAluguel">Gerenciar Aluguel.</a>
-        <br>
-        <br>
-        <i class="fas fa-calendar-alt fa-2x"></i><a href="/atualizarData">Atualizar Data de Entrega.</a>
-        <br>
-        <br>
-        <i class="fas fa-calendar-alt fa-2x"></i><a href="/atualizarRetirada">Atualizar Data de Retirada.</a>
-        <!-- <div class="row">-->
-        <!--<div class="col-xl-9 mx-auto">-->
-        <!--</div>-->
-    </div>
+        <div class="page-header">
+            <h1>Bem vindo(a), <span sec:authentication="name"></span>!</h1>
+        </div>
+        <div class="row">
+            <div class="col-3"> <i class="fas fa-address-book fa-3x float-left "></i></div>
+            <div class="col-9 text-left">    <a href="/gerenciarCli" class="text-left">Gerenciar Cliente.</a> </div>
+            <br>
+            <br>
+            <br>
+        </div>
 
+        <div class="row">
+            <div class="col-3"> <i class="fas fa-tshirt fa-3x float-left"></i></div>
+            <div class="col-9 text-left">  <a href="/gerenciarRoupaUtensilios" class="text-left">Gerenciar Trajes.</a></div>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="row">
+            <div class="col-3"><i class="fas fa-link fa-3x float-left"></i></div>
+            <div class="col-9 text-left"><a href="/gerenciarAluguel" class="tamfonte text-left">Gerenciar Aluguel.</a></div>
+            <br>
+            <br>
+            <br>
+        </div>
+
+        <div class="row">
+            <div class="col-3"><i class="fas fa-calendar-alt fa-3x float-left"></i></div>
+            <div class="col-9 text-left"> <a href="/atualizarData" class="tamfonte">Atualizar Data de Entrega.</a> </div>
+            <br>
+            <br>
+            <br>
+        </div>
+
+        <div class="row">
+            <div class="col-3"> <i class="fas fa-calendar-alt fa-3x float-left"></i></div>
+            <div class="col-9 text-left">    <a href="/atualizarRetirada" class="tamfonte">Atualizar Data de Retirada.</a> </div>
+            <br>
+            <br>
+            <br>
+        </div>
+
+    </div>
+    <h3 class="text-center" >Atualizar Data de Retirada</h3>
     <div class="container box">
         <!-- <div class="row">-->
         <!--<div class="col-xl-9 mx-auto">-->
