--- a/src/main/resources/templates/cadastroFuncionario.html
+++ b/src/main/resources/templates/cadastroFuncionario.html
@@ -35,7 +35,7 @@
     </div>
 </nav>
 
-<!-- Masthead -->
+<!-- Masthead -->☺
 <header class="masthead text-dark text-center">
     <!-- <div class="overlay "></div>-->
     <div class="container box">
